fix: remove comments

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li></li>
                 <li><a href="https://www.xpcourse.com/ostrich-courses">Ostrich management courses</a></li>
                 <li><a href="https://infograd18.ru/kursy-kroyki-i-shitya/">The course of cutting and sewing</a></li>
-                <li><a href="https://rs.school/js/">Курс «JavaScript/Front-end»</a></li>
+                <li><a href="https://rs.school/js/">Course «JavaScript/Front-end»</a></li>
             </ul>
         </section>
 
