feat: add links

--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
                 </li>
                 <li class="myEmail">
                     <div class="email__pic"></div>
-                    <div class="myEmail__adress">
+                    <a href="mailto:snegopad.izh@gmail.com" class="myEmail__adress">
                         snegopad.izh@gmail.com
-                    </div>
+                    </a>
                 </li>
             </ul>
             <div class="right__block">
                 <ul class="soc__logos">
                     <li class="soc-logo__wrapper">
-                        <div class="git__logo"></div>
+                        <a href="https://github.com/Snegopad-izh" target="_blank" class="git__logo"></a>
                         <div class="spin"></div>
                     </li>
                     <li class="soc-logo__wrapper">
-                        <div class="telegram__logo">
+                        <a href="https://discordapp.com/users/Snegopad#4913/" target="_blank" class="telegram__logo">
                             <div class="discord__logo"></div>
-                        </div>
+                        </a>
                         <div class="spin"></div>
                     </li>
                     <li class="soc-logo__wrapper">
-                        <div class="telegram__logo">
+                        <a href="https://t.me/snegopad_izh/" target="_blank" class="telegram__logo">
                             <div class="telegram-logo__pic"></div>
-                        </div>
+                        </a>
                         <div class="spin"></div>
                     </li>
                 </ul>
