fix: link to assets files

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="main-content__wrapper">
                 <section class="work__wrapper" id="profile">
                     <div class="profile__title">
-                        <img src="/assets/svg/profile_logo.svg" alt="profile_pic" class="profile_logo">
+                        <img src="assets/svg/profile_logo.svg" alt="profile_pic" class="profile_logo">
                         <h2 class="profile_caption">Profile</h2>
                         <div class="profile_line"></div>
                     </div>
@@ -137,31 +137,31 @@
                 <div class="twoBlockWrapper">
                     <section class="twoBlockWrapper__left-block" id="main-skills">
                         <div class="profile__title">
-                            <img src="/assets/svg/skills_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/skills_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Main&nbsp;Skills</h2>
                             <div class="profile_line"></div>
                         </div>
                         <ul class="main-skills__list">
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Solving algorithmic problems
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Knowledge of basic principles of programming
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Site layout according to the template
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     In-depth knowledge of electronic architecture
                                 </p>
@@ -170,37 +170,37 @@
                     </section>
                     <section class="twoBlockWrapper__right-block" id="tools">
                         <div class="profile__title">
-                            <img src="/assets/svg/tools_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/tools_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Tools</h2>
                             <div class="profile_line"></div>
                         </div>
                         <ul class="main-skills__list">
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     JavaScript
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     HTML5, CSS3
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     VCS GIT
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     VS Code
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Figma
                                 </p>
@@ -216,13 +216,13 @@
                 <div class="twoBlockWrapper">
                     <section class="twoBlockWrapper__left-block" id="education">
                         <div class="profile__title">
-                            <img src="/assets/svg/education_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/education_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Education</h2>
                             <div class="profile_line"></div>
                         </div>
                         <ul class="main-skills__list">
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     ISTU 2006-2010 Bachelor of Engineering and <br>Technology of Radioelectronic (sp.210201)
                                 </p>
@@ -231,19 +231,19 @@
                     </section>
                     <section class="twoBlockWrapper__right-block" id="languages">
                         <div class="profile__title">
-                            <img src="/assets/svg/language_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/language_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Languages</h2>
                             <div class="profile_line"></div>
                         </div>
                         <ul class="main-skills__list">
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Russian - Native
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     English - A2
                                 </p>
@@ -254,19 +254,19 @@
                 <div class="twoBlockWrapper">
                     <section class="twoBlockWrapper__left-block" id="courses">
                         <div class="profile__title">
-                            <img src="/assets/svg/courses_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/courses_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Courses</h2>
                             <div class="profile_line"></div>
                         </div>
                         <ul class="main-skills__list">
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     JS/FE Pre-School 2022
                                 </p>
                             </li>
                             <li class="main-skills__item">
-                                <img src="/assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
                                     Cutting and sewing
                                 </p>
@@ -277,7 +277,7 @@
                     </section>
                     <section class="twoBlockWrapper__right-block" id="code-example">
                         <div class="profile__title">
-                            <img src="/assets/svg/js_pic.svg" alt="skills_pic" class="profile_logo">
+                            <img src="./assets/svg/js_pic.svg" alt="skills_pic" class="profile_logo">
                             <h2 class="profile_caption">Code&nbsp;example</h2>
                             <div class="profile_line"></div>
                         </div>
@@ -298,7 +298,7 @@ return i;
                 </div>
                 <section class="work__wrapper" id="work-experiences">
                     <div class="profile__title">
-                        <img src="/assets/svg/work_pic.svg" alt="profile_pic" class="profile_logo">
+                        <img src="./assets/svg/work_pic.svg" alt="profile_pic" class="profile_logo">
                         <h2 class="profile_caption">Work&nbsp;Experiences</h2>
                         <div class="profile_line"></div>
                     </div>
@@ -313,7 +313,7 @@ return i;
                                 </p>
                             </div>
                             <div class="work-content__road">
-                                <img src="/assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
+                                <img src="./assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
                                 <div class="work-content-road__line"></div>
                             </div>
                             <div class="work-content__text">
@@ -335,7 +335,7 @@ return i;
                                 </p>
                             </div>
                             <div class="work-content__road">
-                                <img src="/assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
+                                <img src="./assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
                                 <div class="work-content-road__line"></div>
                             </div>
                             <div class="work-content__text">
@@ -354,7 +354,7 @@ return i;
                                 </p>
                             </div>
                             <div class="work-content__road">
-                                <img src="/assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
+                                <img src="./assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
                                 <div class="work-content-road__line"></div>
                             </div>
                             <div class="work-content__text">
@@ -372,7 +372,7 @@ return i;
                 <a href="https://github.com/Snegopad-izh" class="left-box__link">GITHUB</a>
             </div>
             <a href="https://rs.school/js-stage0/" class="RSSchool-link">
-                <img src="/assets/svg/rss.svg" alt="RSSchool-link" class="RSSchool-link_pic">
+                <img src="./assets/svg/rss.svg" alt="RSSchool-link" class="RSSchool-link_pic">
             </a>
         </footer>
     </div>
