fix: link to assets files

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="main-content__wrapper">
                 <section class="work__wrapper" id="profile">
                     <div class="profile__title">
-                        <img src="assets/svg/profile_logo.svg" alt="profile_pic" class="profile_logo">
+                        <img src="./assets/svg/profile_logo.svg" alt="profile_pic" class="profile_logo">
                         <h2 class="profile_caption">Profile</h2>
                         <div class="profile_line"></div>
                     </div>
