feat: add R-R information

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Igor Radchenko
                     </h1>
                     <div class="myFunction">
-                        FE developer
+                        JS FrontEnd developer
                     </div>
                 </div>
             </div>
@@ -190,6 +190,12 @@
                             <li class="main-skills__item">
                                 <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
                                 <p class="main-skills-item__text">
+                                    React, Redux
+                                </p>
+                            </li>
+                            <li class="main-skills__item">
+                                <img src="./assets/svg/li_marker.svg" alt="li_marker" class="li__marker">
+                                <p class="main-skills-item__text">
                                     VCS GIT
                                 </p>
                             </li>
@@ -205,11 +211,6 @@
                                     Figma
                                 </p>
                             </li>
-
-
-
-
-                            
                         </ul>
                     </section>
                 </div>
@@ -359,6 +360,23 @@ return i;
                             </div>
                             <div class="work-content__text">
                                Learn JS/FE in RSSchool
+                            </div>
+                        </li>
+                        <li class="work__content">
+                            <div class="work-content__date">
+                                <h3 class="work-content-date__period">
+                                    <date>2022</date>
+                                </h3>
+                                <p class="work-content-date__company">
+                                    
+                                </p>
+                            </div>
+                            <div class="work-content__road">
+                                <img src="./assets/svg/road-pic.svg" alt="profile_pic" class="work-content-road__pic">
+                                <div class="work-content-road__line"></div>
+                            </div>
+                            <div class="work-content__text">
+                               Learn React render, Redux state manager
                             </div>
                         </li>
                     </ul>
